fix: Project deployed on netlify

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>day01-simple-todo-list</title>
+    <title>day02-basic-calculator</title>
     <script src="tailwind.js"></script>
     <script>
         tailwind.config = {
